kept commented code in case there are future updates to the keyboard layout

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <script src="index.js" defer></script>
+  <link rel="stylesheet" href="virtualKeyboard.css">
+  <script src="virtualKeyboard.js" defer></script>
   <title>Virtual Keyboard</title>
 </head>
 
@@ -13,7 +13,7 @@
   <input type="text">
   <input type="text">
   <textarea cols="30" rows="10"></textarea>
-  <div id="keyboard-container">
+  <!-- <div id="keyboard-container">
     <div class="keyboard-row" id="first-row">
       <div class="keys dual-keys first-row-keys">
         <div class="primary-key">`</div>
@@ -244,7 +244,7 @@
         <div class="secondary-key"></div>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
