added example of numeric keyboard layout

--- a/index.html
+++ b/index.html
@@ -10,9 +10,36 @@
 </head>
 
 <body>
-  <input type="text">
+  <label>Text<input type="text"></label>
+  <label>Password<input type="password"></label>
+  <label>Email<input type="email"></label>
+  <label>Number<input type="number"></label>
   <textarea cols="30" rows="10"></textarea>
-  <!-- <div id="keyboard-container">
+
+  <!-- <div id="number-keyboard-container-nk">
+    <div id="number-keyboard-nk">
+      <div class="keyboard-row-nk">
+        <div class="keys-nk">1</div>
+        <div class="keys-nk">2</div>
+        <div class="keys-nk">3</div>
+      </div>
+      <div class="keyboard-row-nk">
+        <div class="keys-nk">4</div>
+        <div class="keys-nk">5</div>
+        <div class="keys-nk">6</div>
+      </div>
+      <div class="keyboard-row-nk">
+        <div class="keys-nk">7</div>
+        <div class="keys-nk">8</div>
+        <div class="keys-nk">9</div>
+      </div>
+      <div class="keyboard-row-nk">
+        <div class="keys-nk">0</div>
+        <div class="keys-nk">Delete</div>
+      </div>
+    </div>
+  </div> -->
+  <!-- <div id="full-keyboard-fk">
     <div class="keyboard-row" id="first-row">
       <div class="keys dual-keys first-row-keys">
         <div class="primary-key">`</div>
