added testing input areas

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body>
-  <label>Text<input type="text"></label>
-  <label>Password<input type="password"></label>
-  <label>Email<input type="email"></label>
-  <label>Number<input type="number"></label>
-  <textarea cols="30" rows="10"></textarea>
+  <div id="inputs-test-area-vk">
+    <label>Text<input type="text"></label>
+    <label>Password<input type="password"></label>
+    <label>Email<input type="email"></label>
+    <label>Number<input type="number"></label>
+    <textarea cols="30" rows="10"></textarea>
+  </div>
+
 
   <!-- <div id="number-keyboard-container-nk">
     <div id="number-keyboard-nk">
